--- a/conf/application.conf
+++ b/conf/application.conf
@@ -325,6 +325,10 @@ play.db {
   }
 }
 
+play.application.loader = scaldi.play.ScaldiApplicatoinLoader
+play.modules.enabled += modules.MyModule
+play.modules.enabled += scaldi.play.ControlerInjector
+
 ## JDBC Datasource
 # https://www.playframework.com/documentation/latest/JavaDatabase
 # https://www.playframework.com/documentation/latest/ScalaDatabase
