--- a/conf/application.conf
+++ b/conf/application.conf
@@ -325,9 +325,10 @@ play.db {
   }
 }
 
-play.application.loader = scaldi.play.ScaldiApplicatoinLoader
+play.application.loader = scaldi.play.ScaldiApplicationLoader
 play.modules.enabled += modules.MyModule
-play.modules.enabled += scaldi.play.ControlerInjector
+play.modules.enabled += scaldi.play.ControllerInjector
+greeting.official = Welcome
 
 ## JDBC Datasource
 # https://www.playframework.com/documentation/latest/JavaDatabase
