--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,6 +15,6 @@
 # HOCON will fall back to substituting environment variable:
 #mykey = ${JAVA_HOME}
 play.application.loader = scaldi.play.ScaldiApplicationLoader
-play.modules.enabled += modules.MyModule
-play.modules.enabled += scaldi.play.ControllerInjector
+play.modules.enabled += "modules.MyModule"
+play.modules.enabled += "scaldi.play.ControllerInjector"
 greeting.official = Welcome
