Delete binding identifiedBy

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,4 +17,4 @@
 play.application.loader = scaldi.play.ScaldiApplicationLoader
 play.modules.enabled += "modules.WebModule"
 play.modules.enabled += "scaldi.play.ControllerInjector"
-greeting.official = Welcome
+greeting.official = "こんばんは"
